--- a/frontend/css/dashboard/components/mentor-cards.css
+++ b/frontend/css/dashboard/components/mentor-cards.css
@@ -329,6 +329,7 @@
     margin-bottom: 10px;
     font-weight: 500;
     text-align: left;
+    font-family: var(--heading-font);
   }
   .events-list { display: block; width: 100%; text-align: left; }
   .event-item {
