--- a/frontend/css/dashboard/components/mentee.css
+++ b/frontend/css/dashboard/components/mentee.css
@@ -41,6 +41,7 @@
     border-bottom: 1px solid var(--border-color);
     font-size: 1.4rem;
     color: var(--text-color);
+    font-family: var(--heading-font);
 }
 
 .mentees-list {
@@ -149,6 +150,7 @@
     font-size: 16px;
     font-weight: 600;
     color: var(--text-color);
+    font-family: var(--heading-font);
 }
 
 .mentee-list-info p {
@@ -250,6 +252,7 @@
     margin: 0 0 10px;
     font-size: 24px;
     color: var(--text-color);
+    font-family: var(--heading-font);
 }
 
 .mentee-email {
@@ -299,6 +302,7 @@
     margin-bottom: 15px;
     font-size: 18px;
     color: var(--text-color);
+    font-family: var(--heading-font);
 }
 
 .progress-bar {
@@ -371,6 +375,7 @@
     color: var(--text-color);
     display: flex;
     align-items: center;
+    font-family: var(--heading-font);
 }
 
 .mentee-detail-card h3 i {
