--- a/frontend/css/dashboard/layout/header.css
+++ b/frontend/css/dashboard/layout/header.css
@@ -134,6 +134,7 @@
     font-size: 0.8rem;
     font-weight: 600;
     margin-right: 25px;
+    font-family: 'Researcher', sans-serif;
 }
 
 .user-stats {
