--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -111,6 +111,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     line-height: 1.2;
     color: var(--text-color);
+    font-family: 'Researcher', sans-serif;
 }
 
 a {
